Closed Bug 1060989 Opened 10 years ago Closed 10 years ago

Fix more bad implicit constructors in caps

Categories

(Core :: General, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla35

People

(Reporter: ehsan.akhgari, Assigned: ehsan.akhgari)

References

Details

Attachments

(1 file)

      No description provided.
Assignee: nobody → ehsan.akhgari
Blocks: explicit
Attachment #8482001 - Flags: review?(benjamin)
Attachment #8482001 - Flags: review?(benjamin) → review+
https://hg.mozilla.org/mozilla-central/rev/3a575a9f118c
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla35
Flags: qe-verify-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: