Bug 1060989 - Fix more bad implicit constructors in caps; r=bsmedberg